# zizek_map

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
local_scripts/: ingest_absolute_recoil.py  ingest_less_than_nothing.py  ingest_sublime_object.py  smoke_ingest.py
migrations/: env.py
migrations/versions/: 0001_initial.py
plans/: 01_book_component_ingestion.md
src/: main.py  settings.py
src/entrypoints/cli/: __main__.py
src/entrypoints/textual/: app.py
src/entrypoints/textual/screens/: file_picker.py  ingest.py  ingested_books.py
src/ingest/: __init__.py  composition.py  events.py  pipeline.py
src/ingest/llm_tasks/: __init__.py
src/ingest/sections/: __init__.py  heading_based.py  llm_fallback.py
src/ingest/steps/: __init__.py  check_idempotency.py  classify_spine.py  parse_epub.py  persist.py  resolve_sections.py
src/models/: llm_responses.py  text_components.py  text_summary.py
src/observability/: __init__.py  json_formatter.py  setup.py
src/services/: book_component_breakdown_service.py  book_skeleton_service.py  chapter_sectioning_service.py
src/settings/: __init__.py  app.py  database.py  llm.py
src/textual/: app.py
src/textual/screens/: file_picker.py  ingest.py  ingested_books.py
src/workflows/: book_component_breakdown_workflow.py  book_ingest_workflow.py
src/workflows/ingest/: __init__.py  composition.py  context.py  events.py  pipeline.py
src/workflows/ingest/llm_tasks/: __init__.py  sections_fallback_task.py  spine_classification_task.py
(+11 files in other folders)
