[project]
name = "zizek-map-mvp"
version = "0.1.0"
description = "Ingest books (EPUB) into structured components and LLM-generated summaries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "lxml>=6.1.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.101.0",
    "pydantic-settings>=2.14.1",
    "pyright>=1.1.409",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
